...
        android:layout_marginTop="@dimen/margin_6"
        android:textColor="@color/error"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/postCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/error_postcode_uk" />

    <com.judopay.view.JudoEditText

        android:id="@+id/postCodeEditText"
        style="@style/Widget.Judo.Postcode"
        android:background="@null"
...
